--- a/index.html
+++ b/index.html
@@ -66,5 +66,18 @@
         </ul> 
     </section>
 </main>
+
+<!-- SITE-FOOTER -->
+
+<footer>
+    <ul>
+        <li><a href="#" target="_blank">Telegram</a></li>
+        <li><a href="#" target="_blank">Facebook</a></li>
+        <li><a href="#" target="_blank">Twitter</a></li>
+        <li><a href="#" target="_blank">TikTok</a></li>
+    </ul>
+
+    <p>Copyright 2023 MJB</p>
+</footer>
 </body>
 </html>
